Feature: index.html新增一个猫，添加名字，显示点击数

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
-#catPic{
-  max-width: 600px;
+.mainClass{
+  display: flex;
+}
+
+.catPhotoStyle{
+  max-width: 400px;
+}
+
+.catContainer{
+  margin:20px;
 }
