Feature: 新增猫列表，点击猫列表显示对应图片，每个图片有独自的点击数

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,16 @@
+* {
+  border: 1px solid red !important;
+}
+
+body{
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mainClass{
   display: flex;
+  text-align: center;
 }
 
 .catPhotoStyle{
@@ -7,5 +18,8 @@
 }
 
 .catContainer{
+  width: 100%;
   margin:20px;
+  text-align: center;
+  float: right;
 }
